--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #403F3F;
+    background-color: linear-gradient (45deg, #337ba2, #01464f, #3da7a7);
     text-align: center;
     margin-top: 150px;
     font-size: 30px;
