--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(45deg, #337ba2, #01464f, #3da7a7);
+    background: linear-gradient(45deg, #3a2804, #100ba2, #6e8d0f);
     text-align: center;
     margin-top: 150px;
     font-size: 30px;
@@ -23,23 +23,36 @@ p {
 #start {
     width: 100px;
     height: 50px;
-    border: 2px solid black;
-    border-radius: 8px;
-    color: black;
-    background-color: green;
-    padding: 10px 20px;
+    box-shadow: 0px 0px 5px white;
+    border: none;
+    border-radius: 20px;
+    color: white;
+    background: none;
+    padding: 10px 4px;
+    margin-right: 20px;
     font-size: 15px;
     transition-duration: 0.8s;
     font-weight: bold;
 }
 
+#start:active {
+    background: black;
+    color: red;
+}
+
+#start:hover{
+    cursor: pointer;
+}
+
 #stop {
+    margin-right: 20px;
     width: 100px;
     height: 50px;
-    border: 2px solid black;
-    border-radius: 8px;
-    color: black;
-    background-color: yellow;
+    box-shadow: 0px 0px 5px white;
+    border: none;
+    border-radius: 20px;
+    color: white;
+    background: none;
     padding: 10px 20px;
     font-size: 15px;
     transition-duration: 0.8s;
@@ -47,29 +60,17 @@ p {
 }
 
 #reset {
+    box-shadow: 0px 0px 5px white;
     width: 100px;
+    border: none;
     height: 50px;
-    border: 2px solid black;
-    border-radius: 8px;
-    color: black;
-    background-color: red;
+    border-radius: 20px;
+    color: white;
+    background: none;
     padding: 10px 20px;
     font-size: 15px;
     transition-duration: 0.8s;
     font-weight: bold;
-}
-
-#start:hover {
-    position: relative;
-    top: -10px;
-    border: 2px solid white;
-    border-radius: 8px;
-    color: white;
-    background-color: black;
-    padding: 10px 20px;
-    font-size: 15px;
-    transition-duration: 0.8s;
-    box-shadow: 2px 8px black;
 }
 
 #stop:hover {
