alterei pra baixo

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(to top, #3a2804, #100ba2, #6e8d0f);
+    background: linear-gradient(to bottom, #3a2804, #100ba2, #6e8d0f);
     text-align: center;
     margin-top: 150px;
     font-size: 30px;
